syntax = "proto3";

package matchengine;

option go_package = "match-engine/api/proto";


// 订单服务
service OrderService {
    // 创建订单
    rpc CreateOrder(CreateOrderRequest) returns (CreateOrderResponse);
    // 取消订单
    rpc CancelOrder(CancelOrderRequest) returns (CancelOrderResponse);
    // 查询订单
    rpc GetOrder(GetOrderRequest) returns (GetOrderResponse);
    // 查询用户订单
    rpc GetUserOrders(GetUserOrdersRequest) returns (GetUserOrdersResponse);
    // 批量创建订单
    rpc BatchCreateOrders(BatchCreateOrdersRequest) returns (BatchCreateOrdersResponse);
    // 批量取消订单
    rpc BatchCancelOrders(BatchCancelOrdersRequest) returns (BatchCancelOrdersResponse);
}

// 行情服务
service MarketDataService {
    // 获取订单簿快照
    rpc GetOrderBook(GetOrderBookRequest) returns (GetOrderBookResponse);
    // 订阅订单簿更新
    rpc SubscribeOrderBook(SubscribeOrderBookRequest) returns (stream OrderBookUpdate);
    // 获取最近成交
    rpc GetRecentTrades(GetRecentTradesRequest) returns (GetRecentTradesResponse);
    // 订阅成交
    rpc SubscribeTrades(SubscribeTradesRequest) returns (stream Trade);
    // 获取行情数据
    rpc GetTicker(GetTickerRequest) returns (GetTickerResponse);
}

// 管理服务
service AdminService {
    // 添加交易对
    rpc AddSymbol(AddSymbolRequest) returns (AddSymbolResponse);
    // 移除交易对
    rpc RemoveSymbol(RemoveSymbolRequest) returns (RemoveSymbolResponse);
    // 暂停交易
    rpc PauseTrading(PauseTradingRequest) returns (PauseTradingResponse);
    // 恢复交易
    rpc ResumeTrading(ResumeTradingRequest) returns (ResumeTradingResponse);
    // 开始集合竞价
    rpc StartAuction(StartAuctionRequest) returns (StartAuctionResponse);
    // 结束集合竞价
    rpc EndAuction(EndAuctionRequest) returns (EndAuctionResponse);
    // 获取系统状态
    rpc GetSystemStatus(GetSystemStatusRequest) returns (GetSystemStatusResponse);
}

// 订单方向
enum OrderSide {
    ORDER_SIDE_UNSPECIFIED = 0;
    ORDER_SIDE_BUY = 1;
    ORDER_SIDE_SELL = 2;
}

// 订单类型
enum OrderType {
    ORDER_TYPE_UNSPECIFIED = 0;
    ORDER_TYPE_LIMIT = 1;
    ORDER_TYPE_MARKET = 2;
    ORDER_TYPE_STOP_LOSS = 3;
    ORDER_TYPE_TAKE_PROFIT = 4;
    ORDER_TYPE_ICEBERG = 5;
}

// 订单有效期
enum TimeInForce {
    TIME_IN_FORCE_UNSPECIFIED = 0;
    TIME_IN_FORCE_GTC = 1;
    TIME_IN_FORCE_IOC = 2;
    TIME_IN_FORCE_FOK = 3;
    TIME_IN_FORCE_POST_ONLY = 4;
}

// 订单状态
enum OrderStatus {
    ORDER_STATUS_UNSPECIFIED = 0;
    ORDER_STATUS_NEW = 1;
    ORDER_STATUS_PARTIALLY_FILLED = 2;
    ORDER_STATUS_FILLED = 3;
    ORDER_STATUS_CANCELED = 4;
    ORDER_STATUS_REJECTED = 5;
    ORDER_STATUS_EXPIRED = 6;
}

// 订单
message Order {
    string order_id = 1;
    string user_id = 2;
    string symbol = 3;
    OrderSide side = 4;
    OrderType type = 5;
    string price = 6;
    string quantity = 7;
    string filled_qty = 8;
    OrderStatus status = 9;
    TimeInForce time_in_force = 10;
    string stop_price = 11;
    string visible_qty = 12;
    bool reduce_only = 13;
    int64 create_time = 14;
    int64 update_time = 15;
}

// 成交
message Trade {
    string trade_id = 1;
    string symbol = 2;
    string maker_order_id = 3;
    string taker_order_id = 4;
    string maker_user_id = 5;
    string taker_user_id = 6;
    string price = 7;
    string quantity = 8;
    OrderSide maker_side = 9;
    OrderSide taker_side = 10;
    int64 trade_time = 11;
}

// 价格档位
message PriceLevel {
    string price = 1;
    string quantity = 2;
    int32 order_count = 3;
}

// 创建订单请求
message CreateOrderRequest {
    string user_id = 1;
    string symbol = 2;
    OrderSide side = 3;
    OrderType type = 4;
    string price = 5;
    string quantity = 6;
    TimeInForce time_in_force = 7;
    string stop_price = 8;
    string visible_qty = 9;
    bool reduce_only = 10;
    string client_order_id = 11;
}

// 创建订单响应
message CreateOrderResponse {
    bool success = 1;
    string message = 2;
    Order order = 3;
    repeated Trade trades = 4;
}

// 取消订单请求
message CancelOrderRequest {
    string symbol = 1;
    string order_id = 2;
    string user_id = 3;
}

// 取消订单响应
message CancelOrderResponse {
    bool success = 1;
    string message = 2;
    Order order = 3;
}

// 查询订单请求
message GetOrderRequest {
    string symbol = 1;
    string order_id = 2;
}

// 查询订单响应
message GetOrderResponse {
    bool success = 1;
    Order order = 2;
}

// 查询用户订单请求
message GetUserOrdersRequest {
    string symbol = 1;
    string user_id = 2;
    int32 limit = 3;
}

// 查询用户订单响应
message GetUserOrdersResponse {
    bool success = 1;
    repeated Order orders = 2;
}

// 批量创建订单请求
message BatchCreateOrdersRequest {
    repeated CreateOrderRequest orders = 1;
}

// 批量创建订单响应
message BatchCreateOrdersResponse {
    bool success = 1;
    repeated CreateOrderResponse results = 2;
}

// 批量取消订单请求
message BatchCancelOrdersRequest {
    string symbol = 1;
    string user_id = 2;
    repeated string order_ids = 3;
}

// 批量取消订单响应
message BatchCancelOrdersResponse {
    bool success = 1;
    repeated CancelOrderResponse results = 2;
}

// 获取订单簿请求
message GetOrderBookRequest {
    string symbol = 1;
    int32 depth = 2;
}

// 获取订单簿响应
message GetOrderBookResponse {
    bool success = 1;
    string symbol = 2;
    repeated PriceLevel bids = 3;
    repeated PriceLevel asks = 4;
    string last_price = 5;
    int64 timestamp = 6;
    int64 sequence_id = 7;
}

// 订阅订单簿请求
message SubscribeOrderBookRequest {
    string symbol = 1;
    int32 depth = 2;
}

// 订单簿更新
message OrderBookUpdate {
    string symbol = 1;
    OrderSide side = 2;
    string price = 3;
    string quantity = 4;
    string action = 5; // ADD, UPDATE, DELETE
    int64 timestamp = 6;
}

// 获取最近成交请求
message GetRecentTradesRequest {
    string symbol = 1;
    int32 limit = 2;
}

// 获取最近成交响应
message GetRecentTradesResponse {
    bool success = 1;
    repeated Trade trades = 2;
}

// 订阅成交请求
message SubscribeTradesRequest {
    string symbol = 1;
}

// 获取行情请求
message GetTickerRequest {
    string symbol = 1;
}

// 获取行情响应
message GetTickerResponse {
    bool success = 1;
    string symbol = 2;
    string last_price = 3;
    string best_bid = 4;
    string best_ask = 5;
    string bid_qty = 6;
    string ask_qty = 7;
    string volume_24h = 8;
    string high_24h = 9;
    string low_24h = 10;
    string price_change = 11;
    int64 timestamp = 12;
}

// 添加交易对请求
message AddSymbolRequest {
    string symbol = 1;
}

// 添加交易对响应
message AddSymbolResponse {
    bool success = 1;
    string message = 2;
}

// 移除交易对请求
message RemoveSymbolRequest {
    string symbol = 1;
}

// 移除交易对响应
message RemoveSymbolResponse {
    bool success = 1;
    string message = 2;
}

// 暂停交易请求
message PauseTradingRequest {
    string symbol = 1;
}

// 暂停交易响应
message PauseTradingResponse {
    bool success = 1;
    string message = 2;
}

// 恢复交易请求
message ResumeTradingRequest {
    string symbol = 1;
}

// 恢复交易响应
message ResumeTradingResponse {
    bool success = 1;
    string message = 2;
}

// 开始集合竞价请求
message StartAuctionRequest {
    string symbol = 1;
}

// 开始集合竞价响应
message StartAuctionResponse {
    bool success = 1;
    string message = 2;
}

// 结束集合竞价请求
message EndAuctionRequest {
    string symbol = 1;
}

// 结束集合竞价响应
message EndAuctionResponse {
    bool success = 1;
    string message = 2;
    string open_price = 3;
    string max_volume = 4;
    int32 trade_count = 5;
}

// 获取系统状态请求
message GetSystemStatusRequest {}

// 获取系统状态响应
message GetSystemStatusResponse {
    bool success = 1;
    string status = 2;
    int32 symbol_count = 3;
    int64 event_queue_len = 4;
    int64 command_queue_len = 5;
    map<string, SymbolStatus> symbols = 6;
}

// 交易对状态
message SymbolStatus {
    string symbol = 1;
    int32 bid_levels = 2;
    int32 ask_levels = 3;
    int32 total_orders = 4;
    string last_price = 5;
    bool paused = 6;
}
